tests: skip sd_reservation on solaris as it fails

--- a/core/src/tests/CMakeLists.txt
+++ b/core/src/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 #   BAREOS® - Backup Archiving REcovery Open Sourced
 #
-#   Copyright (C) 2017-2020 Bareos GmbH & Co. KG
+#   Copyright (C) 2017-2021 Bareos GmbH & Co. KG
 #
 #   This program is Free Software; you can redistribute it and/or
 #   modify it under the terms of version three of the GNU Affero General Public
@@ -370,7 +370,10 @@ if(HAVE_EXECINFO_H
   )
 endif() # HAVE_EXECINFO_H ..
 
-if(GMOCK_FOUND AND NOT client-only)
+if(GMOCK_FOUND
+   AND NOT client-only
+   AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "SunOS"
+)
   bareos_add_test(
     sd_reservation LINK_LIBRARIES ${LINK_LIBRARIES} ${GMOCK_LIBRARIES}
   )
